Accidentally added a overflow hidden to root which prevents scrolling on the main page

--- a/src/index.css
+++ b/src/index.css
@@ -11,14 +11,13 @@ li {
 html,
 body,
 #root {
-	/* scrollbar-gutter: stable; */
-	/* overflow-x: hidden; */
+	scrollbar-gutter: stable;
+	overflow-x: hidden;
 	background-color: rgba(13, 15, 17, 1);
 	width: 100vw;
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
 }
 
 * {
